0.2.0 相对 0.1.0 的改动：
1、POM 文件中增加 maven-source-plugin 配置。
2、重写 AbstractGeneticAlgorithm 类，重新设计遗传算法流程框架。
3、删除 AbstractGeneticAlgorithm 的 getBestFitnessList 和 getMeanFitnessList 方法。现在所有统计数据全部使用 DataCollector 获得，算法不再提供。
4、删除 AbstractGeneticAlgorithm 的 getBestIndividual 方法。现在由 run 方法返回运行结果，并且现在返回的是所有代中适应度最好的个体，而不是最后一代中适应度最好的个体。
5、修复适应度为负数时算法运行不正常的错误。现在，适应度为负数时会抛出 NegativeFitnessException 异常。
6、新增表示种群的 Population 类。
7、重写 SimpleGeneticAlgorithm 类。现在，SimpleGeneticAlgorithm 完全由各项参数确定具体行为。
8、删除 ElitistModelGeneticAlgorithm 类，现由 SimpleGeneticAlgorithm 和 ElitistProportionalModelSelection 来实现。
9、新增支持多线程的 StandardParallelGeneticAlgorithm 类。
10、修改 SelectionOperator 中的 select 方法的定义，以适应新的 Population 类和 StandardParallelGeneticAlgorithm 类。
11、在 SelectionOperator 中添加 protect 方法，以适应新的 AbstractGeneticAlgorithm 类。在 SelectionOperator 中添加 survival 方法，以适应新的 AbstractGeneticAlgorithm 类。
12、新增 ElitistProportionalModelSelection 类，实现能够保存最优的比例选择。
13、修改 CrossoverOperator 中的 cross 方法的定义，以适应新的 Population 类。
14、修改 MutationOperator 中的 mutate 方法的定义，以适应新的 Population 类和 StandardParallelGeneticAlgorithm 类。
15、Evaluator 接口继承 Cloneable 接口，并定义 clone 方法，以适应新的 StandardParallelGeneticAlgorithm 类。
16、修改 DataCollector 中的 collectData 方法的定义，以适用新的 Population 类。
17、GrayCodeChromosome 类添加新的构造方法，允许设置基因数组。
18、修复 GrayCodeChromosome 类的 decode 方法解码错误的问题。