@@ -6,8 +6,21 @@
   <version>0.2.0</version>
   <name>GA4J</name>
   
+  <dependencies>
+  	<dependency>
+  		<groupId>org.junit.jupiter</groupId>
+  		<artifactId>junit-jupiter</artifactId>
+  		<version>5.9.0</version>
+  		<scope>test</scope>
+  	</dependency>
+  </dependencies>
+  
   <build>
   	<plugins>
+  		<plugin>
+  			<artifactId>maven-surefire-plugin</artifactId>
+  			<version>2.22.2</version>
+  		</plugin>
   		<plugin>
   			<groupId>org.apache.maven.plugins</groupId>
   			<artifactId>maven-source-plugin</artifactId>
